--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ng-icons/bootstrap-icons": "^29.10.0",
     "@ng-icons/core": "^29.10.0",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "ngx-bootstrap-icons": "^1.9.3",
     "repo-images": "^1.0.1",
     "rxjs": "~7.8.0",
